<resources>
    <string name="app_name">mDLM</string>
    <string name="tab_HRM">HRM</string>
    <string name="tab_BP">BP</string>
    <string name="tab_DD">DD</string>
    <string name="action_settings">Settings</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="floating_item_bmk">Go to Bookmark</string>
    <string name="floating_item_close">Update to DB</string>
    <string name="floating_item_check">Close &amp; Not update</string>
    <string name="pref_option_title">Option</string>
    <string name="pref_hrm_option_title">HRM 데이터 수집방식</string>
    <string name="pref_hrm_option_desp">HRM 데이터 수집방식을 설정하세요</string>
    <string name="pref_hrm_server_title">서버에 데이터 요청</string>
    <string name="pref_hrm_server_desp">서버에게 HRM 데이터 수집을 요청합니다</string>
    <string name="pref_hrm_local_title">로컬에서 데이터 수집</string>
    <string name="pref_hrm_local_desp">서버에서 기본정보만 받고,\n로컬에서 데이터를 수집합니다</string>
    <string name="pref_hrm_none_title">수집하지 않음</string>
    <string name="pref_hrm_none_desp">데이터를 수집하지 않습니다</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_server_ip_title">IP</string>
    <string name="pref_server_port_title">Port</string>
    <string name="pref_dropbox_title">Dropbox</string>
    <string name="pref_info_title">Info</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_desp">mDLM_release_2.5</string>
    <string name="toast_db_access_msg">DB 데이터 로드 완료</string>
    <string name="toast_db_save_msg">DB 저장 완료</string>
    <string name="toast_db_fail_msg">DB 접속 실패!\n서버상태를 확인하세요</string>
    <string name="custom_log_tag">muta</string>
</resources>
